src/objects/Account_Renewals__c.object
<CustomObject>
    <fields>
        <fullName>account_id__c</fullName>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Account Renewals</relationshipLabel>
        <relationshipName>Account_Renewals</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>cancellation_mtd_amount__c</fullName>
        <label>Month total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>cancellation_wtd_1_amount__c</fullName>
        <label>Week 1</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>cancellation_wtd_2_amount__c</fullName>
        <label>Week 2</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>cancellation_wtd_3_amount__c</fullName>
        <label>Week 3</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>product_category_type__c</fullName>
        <label>Category</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>product_name__c</fullName>
        <label>Product</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>product_order__c</fullName>
        <formula>IF(UPPER(  product_subcategory_type__c  )=&apos;DIRECTA&apos;,CASE(UPPER(  product_name__c  ),&apos;PRÉSTAMO&apos;,1,&apos;COMEX&apos;,2,&apos;LEASING&apos;,3,&apos;DESCUENTO DE LETRAS&apos;,4,&apos;FACTORING&apos;,5,&apos;OTROS&apos;,6,0),CASE(UPPER( product_name__c),&apos;FIANZAS&apos;,7,&apos;CARTA CRÉDITO&apos;,8,&apos;OTROS&apos;,9,0))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product order</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>product_subcategory_type__c</fullName>
        <label>Subcategory</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>product_subcategory_type_order__c</fullName>
        <formula>CASE(UPPER(  product_subcategory_type__c ),&apos;DIRECTA&apos;,1,&apos;INDIRECTA&apos;,2,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Subcategory order</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>unique_id__c</fullName>
		<externalId>true</externalId>
        <label>Unique Identifier</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Cancelaciones</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>account_id__c</columns>
        <columns>product_category_type__c</columns>
        <columns>product_subcategory_type__c</columns>
        <columns>product_name__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>AR-{0000000000}</displayFormat>
        <label>Reference</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Cancelaciones</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>